--- a/data/cards/67282505.yaml
+++ b/data/cards/67282505.yaml
@@ -45,6 +45,8 @@ series:
 - Ninja
 images:
 - index: 1
+  image: MitsutheInsectNinja-LART-EN-UR-LE.png
+- index: '1.1'
   image: MitsutheInsectNinja-DABL-EN-UR-1E.png
 sets:
   en:
@@ -53,30 +55,50 @@ sets:
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: LART-EN061
+    set_name: The Lost Art Promotion 2023 H
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DABL-DE016
     set_name: Darkwing Blast
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: LART-DE061
+    set_name: The Lost Art Promotion 2023 H
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DABL-FR016
     set_name: Darkwing Blast
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: LART-FR061
+    set_name: The Lost Art Promotion 2023 H
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DABL-IT016
     set_name: Darkwing Blast
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: LART-IT061
+    set_name: The Lost Art Promotion 2023 H
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DABL-PT016
     set_name: Darkwing Blast
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: LART-PT061
+    set_name: The Lost Art Promotion 2023 H
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DABL-JP016
     set_name: Darkwing Blast
