--- a/rush.yaml
+++ b/rush.yaml
@@ -114596,6 +114596,62 @@ yugipedia_page_id: 1004489
 ---
 konami_id:
 name:
+  en: Sanctum of Legend
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サンクタム・オブ・レジェンド
+  ja_romaji: Sankutamu Obu Rejendo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    While this card is face-up in the Field Zone, face-up Level 8 or higher Dragon Type monsters on the field gain 500 ATK, and face-up Dragon Type Legend monsters on the field cannot be destroyed by card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Field
+images:
+- index: 1
+  image: SanctumofLegend-RDSD0A-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0A-JP028
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1004535
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
