--- a/data/cards/51849482.yaml
+++ b/data/cards/51849482.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19080
 password: 51849482
 name:
   en: Finis Terrae, Tower of the Necroworld
@@ -66,6 +66,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993281
