--- a/data/cards/73046708.yaml
+++ b/data/cards/73046708.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19036
 password: 73046708
 name:
   en: Armored Xyz
@@ -50,7 +50,7 @@ sets:
     - Collector's Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   text:
     en: true
