--- a/data/cards/87837090.yaml
+++ b/data/cards/87837090.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19081
 password: 87837090
 name:
   en: Kuibelt the Blade Dragon
@@ -73,6 +73,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993279
