--- a/data/cards/12397569.yaml
+++ b/data/cards/12397569.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19088
 password: 12397569
 name:
   en: Divine Domain Baatistina
@@ -69,6 +69,6 @@ sets:
     - Ultra Rare
     - Quarter Century Secret Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993299
