--- a/data/cards/13510157.yaml
+++ b/data/cards/13510157.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19085
 password: 13510157
 name:
   en: Hound of the Tistina
@@ -68,6 +68,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993294
