--- a/data/cards/24454387.yaml
+++ b/data/cards/24454387.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19079
 password: 24454387
 name:
   en: Zuttomozaurus
@@ -66,6 +66,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993283
