--- a/data/cards/50727844.yaml
+++ b/data/cards/50727844.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19083
 password: 50727844
 name:
   en: Synchro Forceback
@@ -64,6 +64,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993285
