--- a/data/cards/58882608.yaml
+++ b/data/cards/58882608.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19089
 password: 58882608
 name:
   en: Breath of the Tistina
@@ -64,6 +64,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993297
