--- a/data/cards/86111442.yaml
+++ b/data/cards/86111442.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19084
 password: 86111442
 name:
   en: Sentinel of the Tistina
@@ -68,6 +68,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993291
