--- a/data/cards/86999951.yaml
+++ b/data/cards/86999951.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19087
 password: 86999951
 name:
   en: Crystal God Tistina
@@ -73,6 +73,6 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993296
