--- a/data/rush/yugipedia1004535.yaml
+++ b/data/rush/yugipedia1004535.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードがフィールドゾーンに表側表示である限り、お互いのフィールドの表側表示モンスター（レベル８以上／ドラゴン族）の攻撃力は５００アップし、お互いのフィールドの表側表示のレジェンドモンスター（ドラゴン族）は効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
