--- a/rush.yaml
+++ b/rush.yaml
@@ -114616,7 +114616,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -114628,7 +114629,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードがフィールドゾーンに表側表示である限り、お互いのフィールドの表側表示モンスター（レベル８以上／ドラゴン族）の攻撃力は５００アップし、お互いのフィールドの表側表示のレジェンドモンスター（ドラゴン族）は効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
