--- a/data/rush/yugipedia1001669.yaml
+++ b/data/rush/yugipedia1001669.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    If your opponent has 2 or more monsters on their field, send 1 card from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -24,9 +24,12 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Multi-Choice
 effect:
   en: |-
-    TBA
+    ● This card can attack 3 times this turn.
+    ● Shuffle up to 3 Normal Monsters from your Graveyard into the Deck. Then, you can destroy Spell/Trap Cards on your opponent's field up to [the number of "The Dragias" shuffled into the Deck by this effect].
   de:
   es:
   fr:
@@ -42,6 +45,19 @@ attribute: LIGHT
 level: 12
 atk: 4300
 def: 3500
+materials:
+  en: |-
+    "The Dragias" + "The Dragias" + "The Dragias"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    「ザ☆ドラギアス」＋「ザ☆ドラギアス」＋「ザ☆ドラギアス」
+  ko:
+  zh-TW:
+  zh-CN:
 series:
 - The
 images:
