--- a/data/cards/07526150.yaml
+++ b/data/cards/07526150.yaml
@@ -3,10 +3,10 @@ password: 7526150
 name:
   en: Golgoil
   de: Golgoil
-  es:
+  es: Golgoil
   fr: Golgoil
-  it:
-  pt: Golgoil
+  it: Golgoil
+  pt: Gargóleo
   ja: ゴルゴイル
   ja_romaji: Gorugoiru
   ko:
@@ -16,14 +16,18 @@ name:
 text:
   en: |-
     An iron giant that appears from a dimensional rift.
-  de:
-  es:
-  fr:
-  it:
+  de: |-
+    Ein Gigant aus Eisen, der aus einem Riss im Dimensionsgefüge auftaucht.
+  es: |-
+    Un gigante de hierro que aparece de una fisura dimensional.
+  fr: |-
+    Géant de fer qui surgit d'une crevasse dimensionnelle.
+  it: |-
+    Gigante d'acciaio giunto improvvisamente attraverso una spaccatura dimensionale.
   pt: |-
-    Um gigante de ferro que aparece em uma fenda dimensional.
+    Um gigante de ferro que surge de uma fenda dimensional.
   ja: |-
-    異次元に通じる大きな穴から出てくる、大きな鋼鉄の魔人。
+    異次元に通じる穴から出てくる、大きな鋼鉄の魔人。
   ko:
   zh-TW:
   zh-CN: |-
