--- a/data/cards/77456781.yaml
+++ b/data/cards/77456781.yaml
@@ -2,11 +2,11 @@ konami_id: 4076
 password: 77456781
 name:
   en: Fiend Kraken
-  de: Teufelskrake
-  es: Kraken Demonio
-  fr: Kraken Démoniaque
+  de: Böser Krake
+  es: Adicto Kraken
+  fr: Démon Kraken
   it: Kraken il Demone
-  pt: Kraken Demônio
+  pt: Kraken-Demônio
   ja: デビル・クラーケン
   ja_romaji: Debiru Kurāken
   ko:
@@ -25,7 +25,7 @@ text:
   it: |-
     Questo calamaro gigante trascina i suoi nemici in una profondissima tomba marina.
   pt: |-
-    Uma lula gigante, que arrasta os seus inimigos para uma sepultura marinha.
+    Uma lula gigante que arrasta seus inimigos para um túmulo aquático.
   ja: |-
     海に潜む巨大イカ。海中から突然あらわれ攻撃をする。
   ko:
