--- a/data/rush/15352.yaml
+++ b/data/rush/15352.yaml
@@ -54,6 +54,8 @@ attribute: DARK
 level: 1
 atk: 800
 def: 500
+series:
+- Red-Eyes
 images:
 - index: 1
   image: BlackDragonsChick-RDGRP1-JP-C.png
