--- a/data/rush/15353.yaml
+++ b/data/rush/15353.yaml
@@ -51,7 +51,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Signature move
+- Red-Eyes
 images:
 - index: 1
   image: InfernoFireBlast-RDGRP1-JP-C.png
