--- a/data/cards/30327674.yaml
+++ b/data/cards/30327674.yaml
@@ -45,7 +45,11 @@ series:
 - Chaos
 images:
 - index: 1
+  image: ChaosWitch-PHHY-JP-SR.png
+  illustration: ChaosWitch-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: ChaosWitch-PHHY-EN-SR-1E.png
+  illustration: ChaosWitch-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: PHHY-EN009
