--- a/rush.yaml
+++ b/rush.yaml
@@ -6087,8 +6087,6 @@ attribute: DARK
 level: 1
 atk: 800
 def: 500
-series:
-- Red-Eyes
 images:
 - index: 1
   image: BlackDragonsChick-RDGRP1-JP-C.png
@@ -6166,7 +6164,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Red-Eyes
+- Signature move
 images:
 - index: 1
   image: InfernoFireBlast-RDGRP1-JP-C.png
@@ -54649,8 +54647,6 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
-series:
-- Red-Eyes
 images:
 - index: 1
   image: BlackDragonsRoar-RDGRP1-JP-C.png
@@ -96664,20 +96660,6 @@ attribute: FIRE
 level: 8
 atk: 3500
 def: 2000
-materials:
-  en: |-
-    "Red-Eyes Black Dragon" + "Meteor Dragon"
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-series:
-- Red-Eyes
 images:
 - index: 1
   image: MeteorBlackDragon-RDLGP1-JP-ORR.png
@@ -98443,8 +98425,6 @@ attribute: EARTH
 level: 6
 atk: 1800
 def: 2000
-series:
-- Red-Eyes
 images:
 - index: 1
   image: MeteorDragon-RDLGP1-JP-C.png
