--- a/rush.yaml
+++ b/rush.yaml
@@ -28160,7 +28160,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the  number of Dragon Type monsters on your opponent's field and in their Graveyard] x 500.
+    This card gains ATK equal to [the total number of face-up Dragon Type monsters on your opponent's field and the number of Dragon Type monsters in your opponent's Graveyard] x 500.
   de:
   es:
   fr:
