--- a/data/cards/60643553.yaml
+++ b/data/cards/60643553.yaml
@@ -35,8 +35,7 @@ text:
   ja: |-
     このカード名の効果は１ターンに１度しか使用できず、相手ターンでも発動できる。①：このカードを手札から捨てて発動できる。このターン、以下の効果を適用する。●相手がメインフェイズ及びバトルフェイズに効果モンスターの特殊召喚に成功する度に、自分はそのモンスターの攻撃力分だけＬＰを回復する。この効果で自分のＬＰが回復しなかった場合、エンドフェイズに自分のＬＰは半分になる。
   ko: |-
-    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없으며, 상대 턴에도 발동할 수 있다. ①: 이 카드를 패에서 버리고 발동할 수 있다. 이 턴에, 이하의 효과를 적용한다.
-    ●상대가 메인 페이즈 및 배틀 페이즈에 효과 몬스터의 특수 소환에 성공할 때마다, 자신은 그 몬스터의 공격력만큼만 LP를 회복한다. 이 효과로 자신의 LP가 회복하지 않았을 경우, 엔드 페이즈에 자신의 LP는 절반이 된다.
+    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없으며, 상대 턴에도 발동할 수 있다. ①: 이 카드를 패에서 버리고 발동할 수 있다. 이 턴에, 이하의 효과를 적용한다. ●상대가 메인 페이즈 및 배틀 페이즈에 효과 몬스터의 특수 소환에 성공할 때마다, 자신은 그 몬스터의 공격력만큼만 LP를 회복한다. 이 효과로 자신의 LP가 회복하지 않았을 경우, 엔드 페이즈에 자신의 LP는 절반이 된다.
   zh-TW:
   zh-CN: |-
     此卡名的效果1回合仅可使用1次，在对手回合中也可以发动。①：将此卡从手牌中扔掉可以发动。此回合适用以下效果。●对手在主要阶段及战斗阶段每次将效果怪兽特殊召唤成功，自己恢复该怪兽攻击力数值的LP。自己的LP未以此效果恢复的情况下，自己的LP在结束阶段变为一半。
