--- a/rush.yaml
+++ b/rush.yaml
@@ -114837,6 +114837,78 @@ yugipedia_page_id: 1004631
 ---
 konami_id:
 name:
+  en: Swift Gaia the Fierce Knight
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If this is the only card in your hand, you can Normal Summon this card without Tributing.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: DARK
+level: 7
+atk: 2300
+def: 2100
+series:
+- Gaia
+images:
+- index: 1
+  image: SwiftGaiatheFierceKnight-RDECG1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ECG1-JP005
+    set_name: Rush Duel Card Game Gum
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1004796
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
@@ -114891,3 +114963,65 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 992240
+---
+konami_id:
+name:
+  en: Harpie Cielo
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハーピィ・チェーロ
+  ja_romaji: Hāpyi Chēro
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Return 1 face-up "Harpie Ladies" from your field to the owner's hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 3 cards of your Deck to the Graveyard. Then, if "Harpie Lady" or "Harpie Ladies" is among the cards sent, you can add 1 "Harpie's Feather Tempest" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Winged Beast / Effect
+attribute: WIND
+level: 4
+atk: 1000
+def: 300
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpieCielo-RDECG1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ECG1-JP003
+    set_name: Rush Duel Card Game Gum
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 992242
