--- a/data/cards/16589042.yaml
+++ b/data/cards/16589042.yaml
@@ -8,7 +8,7 @@ name:
   it: Gaia il Cavaliere del Vento Oscuro
   pt: Gaia, o Cavaleiro Impetuoso Célere
   ja: <ruby>疾<rt>しっ</rt></ruby><ruby>風<rt>ぷう</rt></ruby>の<ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby>ガイア
-  ja_romaji: Shippū no Ankoku Kishi Gaia
+  ja_romaji: Shippū no Ankokukishi Gaia
   ko: 질풍의 암흑 기사 가이아
   ko_rr:
   zh-TW: 疾風之暗黑騎士 蓋亞
