--- a/data/rush/15164.yaml
+++ b/data/rush/15164.yaml
@@ -108,6 +108,10 @@ sets:
     set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 1
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/ECG1-JP012
+    set_name: Rush Duel Card Game Gum
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/ST02-KR001
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
