--- a/data/rush/16309.yaml
+++ b/data/rush/16309.yaml
@@ -56,6 +56,10 @@ sets:
     rarities:
     - Rare
     - Secret Rare
+  - set_number: RD/ECG1-JP013
+    set_name: Rush Duel Card Game Gum
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/KP05-KR002
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
