--- a/data/rush/yugipedia992242.yaml
+++ b/data/rush/yugipedia992242.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示の「ハーピィ三姉妹」１体を持ち主の手札に戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード３枚を墓地へ送る。その中に「ハーピィ・レディ」または「ハーピィ三姉妹」がいた場合、さらに自分の墓地の「ハーピィの羽根嵐」１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
