--- a/data/cards/06901008.yaml
+++ b/data/cards/06901008.yaml
@@ -85,6 +85,11 @@ sets:
     set_name: Premium Pack Vol.8
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: SD46-SC014
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
