--- a/data/cards/10723472.yaml
+++ b/data/cards/10723472.yaml
@@ -82,6 +82,11 @@ sets:
     rarities:
     - Normal Parallel Rare
     - Super Rare
+  zh-CN:
+  - set_number: SD46-SC030
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
