--- a/data/cards/14886469.yaml
+++ b/data/cards/14886469.yaml
@@ -107,6 +107,10 @@ sets:
     set_name: Mega Pack 04
     rarities:
     - Common
+  - set_number: SD46-SC011
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
