--- a/data/cards/35058857.yaml
+++ b/data/cards/35058857.yaml
@@ -83,6 +83,11 @@ sets:
     set_name: Premium Pack Vol.11
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: SD46-SC015
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
