--- a/data/cards/49238328.yaml
+++ b/data/cards/49238328.yaml
@@ -225,6 +225,10 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: SD46-SC031
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
   - set_number: TBC1-SCS10
     set_name: The Pot Collection
     rarities:
