--- a/data/cards/50056656.yaml
+++ b/data/cards/50056656.yaml
@@ -37,6 +37,11 @@ sets:
     set_name: 'Structure Deck: Pulse of the King'
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD46-SC033
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
