--- a/data/cards/50078509.yaml
+++ b/data/cards/50078509.yaml
@@ -366,6 +366,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Collector's Rare
+  - set_number: SD46-SC037
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
