--- a/data/cards/54343893.yaml
+++ b/data/cards/54343893.yaml
@@ -208,6 +208,10 @@ sets:
     set_name: Starter Deck 2020
     rarities:
     - Common
+  - set_number: SD46-SC009
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
