--- a/data/cards/60990740.yaml
+++ b/data/cards/60990740.yaml
@@ -164,6 +164,10 @@ sets:
     set_name: 'Theme Pack: Undead Rondo'
     rarities:
     - Common
+  - set_number: SD46-SC016
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
