--- a/data/cards/63086455.yaml
+++ b/data/cards/63086455.yaml
@@ -85,6 +85,10 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: SD46-SC040
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
