--- a/data/cards/66141736.yaml
+++ b/data/cards/66141736.yaml
@@ -97,6 +97,11 @@ sets:
     set_name: Mega Pack 04
     rarities:
     - Rare
+  - set_number: SD46-SCP04
+    set_name: 'Structure Deck: Pulse of the King Rumbling of Heaven and Earth Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
