--- a/data/cards/68490573.yaml
+++ b/data/cards/68490573.yaml
@@ -84,6 +84,11 @@ sets:
     - Secret Rare
     - Ultimate Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: SD46-SC036
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
