--- a/data/cards/70902743.yaml
+++ b/data/cards/70902743.yaml
@@ -256,6 +256,11 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: SD46-SCP01
+    set_name: 'Structure Deck: Pulse of the King Rumbling of Heaven and Earth Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
