--- a/data/cards/71821687.yaml
+++ b/data/cards/71821687.yaml
@@ -105,6 +105,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Rare
+  zh-CN:
+  - set_number: SD46-SC021
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
