--- a/data/cards/77336644.yaml
+++ b/data/cards/77336644.yaml
@@ -107,6 +107,10 @@ sets:
     set_name: Entry Pack Volume 7
     rarities:
     - Super Rare
+  - set_number: SD46-SC017
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
