--- a/data/cards/80666118.yaml
+++ b/data/cards/80666118.yaml
@@ -176,6 +176,11 @@ sets:
     - Secret Rare
     - Ultimate Rare
     - Holographic Rare
+  zh-CN:
+  - set_number: SD46-SC041
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
