--- a/data/cards/84298614.yaml
+++ b/data/cards/84298614.yaml
@@ -154,6 +154,11 @@ sets:
     - Common
     - Gold Rare
     - Gold Secret Rare
+  zh-CN:
+  - set_number: SD46-SC038
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
