--- a/data/cards/97021916.yaml
+++ b/data/cards/97021916.yaml
@@ -225,6 +225,11 @@ sets:
     set_name: Starter Pack Volume 2
     rarities:
     - Common
+  zh-CN:
+  - set_number: SD46-SC004
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
