--- a/data/cards/03431737.yaml
+++ b/data/cards/03431737.yaml
@@ -111,6 +111,10 @@ sets:
     set_name: Mega Pack 03
     rarities:
     - Common
+  - set_number: SD46-SC018
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
