--- a/data/cards/08559524.yaml
+++ b/data/cards/08559524.yaml
@@ -105,6 +105,10 @@ sets:
     set_name: Mega Pack 04
     rarities:
     - Common
+  - set_number: SD46-SC029
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
