--- a/data/cards/09753964.yaml
+++ b/data/cards/09753964.yaml
@@ -156,6 +156,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Extra Secret Rare
+  - set_number: SD46-SC042
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
