--- a/data/cards/15576074.yaml
+++ b/data/cards/15576074.yaml
@@ -116,6 +116,11 @@ sets:
     set_name: Storm of Ragnarok
     rarities:
     - Common
+  zh-CN:
+  - set_number: SD46-SC027
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
