--- a/data/cards/16209941.yaml
+++ b/data/cards/16209941.yaml
@@ -129,6 +129,10 @@ sets:
     set_name: Mega Pack 02
     rarities:
     - Common
+  - set_number: SD46-SC023
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
