--- a/data/cards/19665973.yaml
+++ b/data/cards/19665973.yaml
@@ -339,6 +339,11 @@ sets:
     set_name: "Structure Deck: Devil's Gate"
     rarities:
     - Common
+  zh-CN:
+  - set_number: SD46-SC010
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
