--- a/data/cards/23008320.yaml
+++ b/data/cards/23008320.yaml
@@ -179,6 +179,10 @@ sets:
     set_name: Mega Pack 04
     rarities:
     - Rare
+  - set_number: SD46-SC028
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
