--- a/data/cards/25784595.yaml
+++ b/data/cards/25784595.yaml
@@ -43,6 +43,11 @@ sets:
     set_name: 'Structure Deck: Pulse of the King'
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD46-SC003
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
