--- a/data/cards/27503418.yaml
+++ b/data/cards/27503418.yaml
@@ -103,6 +103,11 @@ sets:
     set_name: 'Invasion: Vengeance'
     rarities:
     - Common
+  zh-CN:
+  - set_number: SD46-SC034
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
