--- a/data/cards/40975574.yaml
+++ b/data/cards/40975574.yaml
@@ -139,6 +139,10 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: SD46-SC007
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
