--- a/data/cards/45313993.yaml
+++ b/data/cards/45313993.yaml
@@ -122,6 +122,11 @@ sets:
     set_name: The Dark Illusion
     rarities:
     - Common
+  zh-CN:
+  - set_number: SD46-SC012
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
