--- a/data/cards/51779204.yaml
+++ b/data/cards/51779204.yaml
@@ -47,6 +47,11 @@ sets:
     set_name: 'Structure Deck: Pulse of the King'
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD46-SC025
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
