--- a/data/cards/52589809.yaml
+++ b/data/cards/52589809.yaml
@@ -108,6 +108,10 @@ sets:
     set_name: Mega Pack 04
     rarities:
     - Common
+  - set_number: SD46-SC013
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
