--- a/data/cards/62242678.yaml
+++ b/data/cards/62242678.yaml
@@ -145,6 +145,12 @@ sets:
     set_name: Dimension Box Limited Edition
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD46-SCP03
+    set_name: 'Structure Deck: Pulse of the King Rumbling of Heaven and Earth Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
