--- a/data/cards/62991792.yaml
+++ b/data/cards/62991792.yaml
@@ -43,6 +43,11 @@ sets:
     set_name: 'Structure Deck: Pulse of the King'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: SD46-SC001
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
