--- a/data/cards/74644400.yaml
+++ b/data/cards/74644400.yaml
@@ -87,6 +87,10 @@ sets:
     set_name: Mega Pack 03
     rarities:
     - Rare
+  - set_number: SD46-SC019
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
