--- a/data/cards/78010363.yaml
+++ b/data/cards/78010363.yaml
@@ -335,6 +335,10 @@ sets:
     set_name: Fusion Ready Pack A
     rarities:
     - Common
+  - set_number: SD46-SC024
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
