--- a/data/cards/78275321.yaml
+++ b/data/cards/78275321.yaml
@@ -152,6 +152,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Common
+  zh-CN:
+  - set_number: SD46-SC020
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
