--- a/data/cards/80280737.yaml
+++ b/data/cards/80280737.yaml
@@ -135,6 +135,10 @@ sets:
     set_name: Mega Pack 03
     rarities:
     - Common
+  - set_number: SD46-SC039
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
