--- a/data/cards/97489701.yaml
+++ b/data/cards/97489701.yaml
@@ -175,6 +175,11 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: SD46-SCP02
+    set_name: 'Structure Deck: Pulse of the King Rumbling of Heaven and Earth Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
