--- a/data/cards/99585850.yaml
+++ b/data/cards/99585850.yaml
@@ -112,6 +112,11 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: SD46-SC044
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
