--- a/data/cards/12501230.yaml
+++ b/data/cards/12501230.yaml
@@ -37,6 +37,8 @@ level: 6
 atk: 2500
 def: 1200
 materials: 1 Tuner + 1 or more non-Tuner monsters
+series:
+- Wheel
 images:
 - index: 1
   image: CombatWheel-AC03-JP-SR.png
