--- a/data/cards/30208479.yaml
+++ b/data/cards/30208479.yaml
@@ -8,7 +8,7 @@ name:
   it: Mago del Chaos Oscuro
   pt: Mago do Caos das Trevas
   ja: マジシャン・オブ・ブラックカオス
-  ja_romaji: Majishan Obu Burakku Kaosu
+  ja_romaji: Majishan obu Burakku Kaosu
   ko: 매지션 오브 블랙 카오스
   ko_rr: Maejisyeon Obeu Beullaek Kaoseu
   zh-TW:
