--- a/data/cards/19322865.yaml
+++ b/data/cards/19322865.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>囚<rt>しゅう</rt></ruby><ruby>人<rt>じん</rt></ruby> ライン・ウォーカー
   ja_romaji: Jibakushūjin Rain Wōkā
-  ko:
+  ko: 지박수인 라인 워커
   ko_rr:
   zh-TW:
   zh-CN: 地缚囚人 沿线步行者
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。自分のデッキ・墓地から「地縛牢」か「異界共鳴－シンクロ・フュージョン」１枚を手札に加える。②：自分フィールドにレベル６以上の「地縛」モンスターが存在する場合、墓地のこのカードを除外し、ＥＸデッキから特殊召喚された相手フィールドの効果モンスター１体を対象として発動できる。その効果モンスターをデッキに戻す。その後、相手はその同名モンスター１体を自身のＥＸデッキから特殊召喚できる。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 일반 소환 / 특수 소환했을 경우에 발동할 수 있다. 자신의 덱 / 묘지에서 "지박뢰" 나 "이계공명 - 싱크로 퓨전" 1장을 패에 넣는다. ②: 자신 필드에 레벨 6 이상의 "지박" 몬스터가 존재하는 경우, 묘지의 이 카드를 제외하고, 엑스트라 덱에서 특수 소환된 상대 필드의 효과 몬스터 1장을 대상으로 발동할 수 있다. 그 효과 몬스터를 덱으로 되돌린다. 그 후, 상대는 그 카드와 같은 이름의 몬스터 1장을 자신의 엑스트라 덱에서 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：这张卡召唤·特殊召唤的场合可以发动。从自己的卡组·墓地将1张「地縛牢／地缚牢」或「異界共鳴－シンクロ・フュージョン／异界共鸣-同调融合」加入手牌。②：自己场上有等级6以上的「地縛／地缚」怪兽存在的场合，可以将墓地的这张卡除外，以从额外卡组特殊召唤的对手场上的1只效果怪兽为对象发动。那只效果怪兽返回卡组。那之后，对手可以将1只其同名怪兽从自身的额外卡组特殊召唤。
