--- a/data/cards/44094981.yaml
+++ b/data/cards/44094981.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>戒<rt>かい</rt></ruby><ruby>隷<rt>れい</rt></ruby> ジオグリフォン
   ja_romaji: Jibakukairei Jiogurifon
-  ko:
+  ko: 지박계례 지오그리폰
   ko_rr:
   zh-TW:
   zh-CN: 地缚戒隶 地画狮鹫
@@ -25,7 +25,9 @@ text:
   ja: |-
     闇属性チューナー＋チューナー以外のモンスター１体以上
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手ターンに発動できる。自分の墓地から「地縛戒隷 ジオグリフォン」以外の「地縛」モンスター１体を守備表示で特殊召喚する。このターン、自分は融合・ＳモンスターしかＥＸデッキから特殊召喚できない。②：このカードが相手によって破壊された場合に発動できる。フィールドのカード１枚を破壊する。その後、自分のフィールド・墓地の「地縛」モンスターの種類×３００ダメージを相手に与える。
-  ko:
+  ko: |-
+    어둠 속성 튜너 ＋ 튜너 이외의 몬스터 1장 이상
+    이 카드명의 ⓛ②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대 턴에 발동할 수 있다. 자신 묘지에서 "지박계례 지오그리폰" 이외의 "지박" 몬스터 1장을 수비 표시로 특수 소환한다. 이 턴, 자신은 융합 / 싱크로 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다. ②: 이 카드가 상대에 의해 파괴되었을 경우에 발동할 수 있다. 필드의 카드 1장을 파괴한다. 그 후, 자신 필드 / 묘지의 "지박" 몬스터의 종류 × 300 데미지를 상대에게 준다.
   zh-TW:
   zh-CN: |-
     暗属性调整+1只以上调整以外的怪兽
