--- a/data/cards/73046708.yaml
+++ b/data/cards/73046708.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: アーマード・エクシーズ
   ja_romaji: Āmādo Ekushīzu
-  ko:
+  ko: 아머드 엑시즈
   ko_rr:
   zh-TW:
   zh-CN: 装甲多维
@@ -29,7 +29,11 @@ text:
     ●装備モンスターの攻撃力は、このカードの攻撃力と同じになる。
     ●装備モンスターの属性は、このカードの属性と同じ属性としても扱う。
     ●装備モンスターが攻撃したダメージステップ終了時にこのカードを墓地へ送って発動できる。その攻撃モンスターはもう１度だけ続けて攻撃できる。
-  ko:
+  ko: |-
+    ①: 자신 필드의 앞면 표시 몬스터 1장과 자신 묘지의 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 대상의 묘지의 몬스터를 이하의 효과를 가진 장착 마법 카드로 취급하여 대상의 필드의 몬스터에 장착한다.
+    ●장착 몬스터의 공격력은, 이 카드의 공격력과 같아진다.
+    ●장착 몬스터의 속성은, 이 카드의 속성과 같은 속성으로도 취급한다.
+    ●장착 몬스터가 공격한 데미지 스텝 종료시에 이 카드를 묘지로 보내고 발동할 수 있다. 그 공격 몬스터는 1번만 더 이어서 공격할 수 있다.
   zh-TW:
   zh-CN: |-
     ①：可以以自己场上的1只表侧表示怪兽和自己墓地的1只多维怪兽为对象发动。将对象之墓地的怪兽视为拥有以下的效果的装备魔法卡装备给对象之场上的怪兽。●装备怪兽的攻击力变为与这张卡的攻击力相同。●装备怪兽的属性也视为与这张卡的属性相同的属性。●装备怪兽攻击的伤害步骤结束时可以将这张卡送入墓地发动。那只攻击怪兽可以再1次继续攻击。
