--- a/data/cards/08690387.yaml
+++ b/data/cards/08690387.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>戒<rt>かい</rt></ruby><ruby>隷<rt>れい</rt></ruby> ジオグレムリン
   ja_romaji: Jibakukairei Jioguremurin
-  ko:
+  ko: 지박계례 지오그렘린
   ko_rr:
   zh-TW:
   zh-CN: 地缚戒隶 地画精怪
@@ -28,7 +28,9 @@ text:
   ja: |-
     闇属性チューナー＋チューナー以外のモンスター１体以上
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手のメインフェイズに、相手フィールドの表側表示モンスター１体を対象として発動できる。相手は以下から１つを選び、自分はその効果を適用する。●対象のモンスターを破壊する。●対象のモンスターの攻撃力分だけ自分のＬＰを回復する。②：自分・相手のバトルフェイズに発動できる。自分の手札・フィールド・墓地のモンスターを融合素材として除外し、「地縛」融合モンスター１体を融合召喚する。
-  ko:
+  ko: |-
+    어둠 속성 튜너 ＋ 튜너 이외의 몬스터 1장 이상
+    이 카드명의 ⓛ②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대 메인 페이즈에, 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 상대는 이하에서 1개를 고르고, 자신은 그 효과를 적용한다. ●대상 몬스터를 파괴한다. ●대상 몬스터의 공격력만큼 자신의 LP를 회복한다. ②: 자신 / 상대 배틀 페이즈에 발동할 수 있다. 자신의 패 / 필드 / 묘지의 몬스터를 융합 소재로 하여 제외하고 "지박" 융합 몬스터 1장을 융합 소환한다.
   zh-TW:
   zh-CN: |-
     暗属性调整+1只以上调整以外的怪兽
