--- a/data/cards/12501230.yaml
+++ b/data/cards/12501230.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: コンバット・ホイール
   ja_romaji: Konbatto Hoīru
-  ko:
+  ko: 컴뱃 휠
   ko_rr:
   zh-TW:
   zh-CN: 战斗机轮
@@ -25,7 +25,9 @@ text:
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
     ①：フィールドのこのカードは１ターンに１度だけ相手の効果では破壊されない。②：相手バトルフェイズに１度、手札を１枚捨てて発動できる。このカードの攻撃力は、自分フィールドの他のモンスターの攻撃力を合計した数値の半分アップする。その後、このカードにカウンターを１つ置く。このターン中、相手モンスターは他のモンスターを攻撃対象に選択できない。③：カウンターが置かれているこのカードが戦闘で破壊された場合に発動する。自分フィールドのモンスターを全て破壊する。
-  ko:
+  ko: |-
+    튜너 ＋ 튜너 이외의 몬스터 1장 이상
+    ①: 필드의 이 카드는 1턴에 1번만 상대의 효과로는 파괴되지 않는다.②: 상대 배틀 페이즈에 1번, 패를 1장 버리고 발동할 수 있다. 이 카드의 공격력은, 자신 필드의 다른 몬스터의 공격력을 합계한 수치의 절반 올린다. 그 후, 이 카드에 카운터를 1개 놓는다. 이 턴 중, 상대 몬스터는 다른 몬스터를 공격 대상으로 선택할 수 없다.③: 카운터가 놓여 있는 이 카드가 전투로 파괴되었을 경우에 발동한다. 자신 필드의 몬스터를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
     调整+1只以上调整以外的怪兽
