--- a/data/cards/33750856.yaml
+++ b/data/cards/33750856.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: コード・ハック
   ja_romaji: Kōdo Hakku
-  ko:
+  ko: 코드 핵
   ko_rr:
   zh-TW:
   zh-CN: 代码入侵
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：自分フィールドのサイバース族Ｌモンスターは相手の効果では破壊されない。②：１ターンに１度、自分と相手のモンスター同士が戦闘を行うバトルステップに発動できる。その相手モンスターの攻撃力はターン終了時まで０になり、お互いのモンスターはその戦闘では破壊されず、その戦闘で発生するお互いの戦闘ダメージは０になる。③：自分の「コード・トーカー」モンスターが攻撃したダメージステップに相手が効果を発動した時、墓地のこのカードを除外して発動できる。その発動を無効にし、その攻撃モンスターの攻撃力を７００アップする。
-  ko:
+  ko: |-
+    ①: 자신 필드의 사이버스족 링크 몬스터는 상대의 효과로는 파괴되지 않는다. ②: 1턴에 1번, 자신과 상대 몬스터끼리 전투를 실행하는 배틀 스텝에 발동할 수 있다. 그 상대 몬스터의 공격력은 턴 종료시까지 0이 되고, 서로의 몬스터는 그 전투로는 파괴되지 않으며, 그 전투로 발생하는 서로의 전투 데미지는 0이 된다. ③: 자신의 "코드 토커" 몬스터가 공격한 데미지 스텝에 상대가 효과를 발동했을 때, 묘지의 이 카드를 제외하고 발동할 수 있다. 그 발동을 무효로 하고, 그 공격 몬스터의 공격력을 700 올린다.
   zh-TW:
   zh-CN: |-
     ①：自己场上的电子空间族链接怪兽不会被对手的效果破坏。②：1回合1次，自己和对手的怪兽之间进行战斗的战斗步骤可以发动。那只对手怪兽的攻击力直到回合结束时为止变为0，双方的怪兽不会被那次战斗破坏，那次战斗发生的对双方的战斗伤害变为0。③：自己的「コード・トーカー／码语者」怪兽攻击的伤害步骤对手发动效果时，可以将墓地的这张卡除外发动。使该发动无效，那只攻击怪兽的攻击力上升700。
