--- a/data/cards/47873397.yaml
+++ b/data/cards/47873397.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: トーテムポール
   ja_romaji: Tōtemu Pōru
-  ko:
+  ko: 토템폴
   ko_rr:
   zh-TW:
   zh-CN: 图腾柱
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：自分フィールドの元々の攻撃力が０の岩石族モンスターを相手は効果の対象にできない。②：相手モンスターの攻撃宣言時に１度、発動できる。その攻撃を無効にし、このカードにカウンターを１つ置く。③：このカードにカウンターが３つ置かれている場合、このカードは墓地へ送られる。④：自分の墓地に攻撃力０の岩石族モンスターが３種類以上存在する場合、墓地のこのカードを除外して発動できる。このターン、相手が受ける効果ダメージは倍になる。
-  ko:
+  ko: |-
+    ①: 자신 필드의 원래의 공격력이 0 인 암석족 몬스터를 상대는 효과의 대상으로 할 수 없다. ②: 상대 몬스터의 공격 선언시에 1번, 발동할 수 있다. 그 공격을 무효로 하고. 이 카드에 카운터를 1개 놓는다. ③: 이 카드의 카운터가 3개 놓여 있을 경우, 이 카드는 묘지로 보내진다. ④: 자신 묘지에 공격력 0 의 암석족 몬스터가 3종류 이상 존재할 경우, 이 카드를 묘지에서 제외하고 발동할 수 있다. 이 턴, 상대가 받는 효과 데미지는 배가 된다.
   zh-TW:
   zh-CN: |-
     ①：对手不能将自己场上的原本的攻击力为0的岩石族怪兽作为效果的对象。②：对手怪兽的攻击宣言时有1次可以发动。使那次攻击无效，在这张卡上放置1个指示物。③：这张卡放置有3个指示物的场合，这张卡送入墓地。④：自己的墓地有3种类以上的攻击力0的岩石族怪兽存在的场合，可以将墓地的这张卡除外发动。这个回合，对手受到的效果伤害变为2倍。
