--- a/data/cards/59712426.yaml
+++ b/data/cards/59712426.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: アルカナフォース<ruby>ⅩⅤ<rt>フィフティーン</rt></ruby>－<ruby>ＴＨＥ<rt>ザ</rt></ruby> <ruby>ＤＥＶＩＬ<rt>デビル</rt></ruby>
   ja_romaji: Arukana Fōsu Fifutīn - Za Debiru
-  ko:
+  ko: 아르카나 포스 XV-더 데블
   ko_rr:
   zh-TW:
   zh-CN: 秘仪之力15-魔鬼
@@ -25,7 +25,8 @@ text:
   pt:
   ja: |-
     ①：このカードを手札から捨てて発動できる。自分のデッキ・墓地から「光の結界」１枚を手札に加える。②：このカードが召喚・反転召喚・特殊召喚した場合に発動する。コイントスを１回行い、その裏表によってこのカードは以下の効果を得る。●表：このカードが戦闘を行う攻撃宣言時、フィールドのモンスター１体を対象として発動できる。そのモンスターを破壊し、そのコントローラーに５００ダメージを与える。●裏：このカードが戦闘を行う攻撃宣言時に発動する。フィールドのモンスターを全て破壊する。
-  ko:
+  ko: |-
+    ①: 이 카드를 패에서 버리고 발동할 수 있다. 자신의 덱 / 묘지에서 "빛의 결계" 1장을 패에 넣는다.②: 이 카드를 일반 소환 / 반전 소환 / 특수 소환했을 경우에 발동한다. 코인 토스를 1회 실행해 나온 면에 따라 이 카드는 이하의 효과를 얻는다.●앞면 : 이 카드가 전투를 실행하는 공격 선언시에, 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 파괴하고, 그 컨트롤러에게 500 데미지를 준다.●뒷면 : 이 카드가 전투를 실행하는 공격 선언시에 발동한다. 필드의 몬스터를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
     ①：可以将这张卡从手牌舍弃发动。从自己的卡组·墓地将1张「光の結界／光之结界」加入手牌。②：这张卡召唤·反转召唤·特殊召唤的场合必定发动。抛1次硬币，根据其正反面这张卡得到以下的效果。●正面：这张卡进行战斗的攻击宣言时，可以以场上的1只怪兽为对象发动。将那只怪兽破坏，给予其操作者500伤害。●反面：这张卡进行战斗的攻击宣言时必定发动。将场上的怪兽全部破坏。
