--- a/data/cards/85106525.yaml
+++ b/data/cards/85106525.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>篝<rt>かがり</rt></ruby><ruby>火<rt>び</rt></ruby>
   ja_romaji: Kagaribi
-  ko:
+  ko: 화톳불
   ko_rr:
   zh-TW:
   zh-CN: 篝火
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：デッキからレベル４以下の炎族モンスター１体を手札に加える。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다.①: 덱에서 레벨 4 이하의 화염족 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：从卡组将1只等级4以下的炎族怪兽加入手牌。
