--- a/data/cards/99742859.yaml
+++ b/data/cards/99742859.yaml
@@ -1,5 +1,5 @@
 konami_id: 19410
-password:
+password: 99742859
 name:
   en: Rescue Hedgehog
   de:
@@ -36,7 +36,7 @@ series:
 - Rescue Squad
 images:
 - index: 1
-  image: RescueHedgehog-VJMP-JP-OP.png
+  image: RescueHedgehog-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP242
