--- a/data/rush/yugipedia1002004.yaml
+++ b/data/rush/yugipedia1002004.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    [TBA]
+    Shuffle 2 Level 5 or higher Spellcaster Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    [TBA]
+    1 face-up Spellcaster Type monster on your field gains ATK equal to [its original ATK] until the end of this turn.
   de:
   es:
   fr:
@@ -40,10 +40,14 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: HighMagicDoubleAcceleration-OW.png
+  image: HighMagicDoubleAcceleration-RDMRP2-JP-OP.png
 sets:
   ja:
-  - set_number: RD/MRP2-JP???
+  - set_number: RD/MRP2-JP018
     set_name: Megaroad Pack 2
     rarities:
+    - Super Rare
+is_translation_unofficial:
+  text:
+    en: true
 yugipedia_page_id: 1002004
