--- a/data/rush/yugipedia1002005.yaml
+++ b/data/rush/yugipedia1002005.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    [TBA]
+    Shuffle 3 Dragon Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    [TBA]
+    This turn, 1 face-up monster on your field gains 900 ATK and your opponent cannot activate Trap Cards when it declares an attack. Then, you can Special Summon 1 "Dragonic Slayer" from your Graveyard to your field in face-up Defense Position.
   de:
   es:
   fr:
@@ -40,10 +40,14 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: DragonicForce-OW.png
+  image: DragonicForce-RDMRP2-JP-OP.png
 sets:
   ja:
-  - set_number: RD/MRP2-JP???
+  - set_number: RD/MRP2-JP034
     set_name: Megaroad Pack 2
     rarities:
+    - Super Rare
+is_translation_unofficial:
+  text:
+    en: true
 yugipedia_page_id: 1002005
