--- a/data/cards/05168381.yaml
+++ b/data/cards/05168381.yaml
@@ -72,6 +72,10 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: 23YJ-JPN02
+    set_name: Labrynth Duel Set
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: DBTM-KR026
     set_name: 'Deck Build Pack: Tactical Masters'
