--- a/data/cards/31305911.yaml
+++ b/data/cards/31305911.yaml
@@ -219,6 +219,10 @@ sets:
     set_name: Starter Deck 2018
     rarities:
     - Common
+  - set_number: 711C-JP004
+    set_name: Yu-Gi-Oh! Card Game x 7-Eleven Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: PP02-KR001
     set_name: Premium Pack Vol.2
