--- a/data/cards/46986414.yaml
+++ b/data/cards/46986414.yaml
@@ -1118,6 +1118,10 @@ sets:
     set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 1
     rarities:
     - Normal Parallel Rare
+  - set_number: 711C-JP001
+    set_name: Yu-Gi-Oh! Card Game x 7-Eleven Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: LOB-K005
     set_name: Legend of Blue Eyes White Dragon
