--- a/data/cards/78193831.yaml
+++ b/data/cards/78193831.yaml
@@ -462,6 +462,10 @@ sets:
     set_name: 'Structure Deck: Yugi Muto'
     rarities:
     - Common
+  - set_number: 711C-JP002
+    set_name: Yu-Gi-Oh! Card Game x 7-Eleven Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: PSV-K050
     set_name: Pharaoh's Servant
