--- a/data/cards/98502113.yaml
+++ b/data/cards/98502113.yaml
@@ -312,6 +312,10 @@ sets:
     set_name: 'Structure Deck: Yugi Muto'
     rarities:
     - Common
+  - set_number: 711C-JP003
+    set_name: Yu-Gi-Oh! Card Game x 7-Eleven Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: DMG-KR001
     set_name: Duel Master's Guide promotional cards
