--- a/data/rush/yugipedia1001997.yaml
+++ b/data/rush/yugipedia1001997.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a monster and you have 3 or more Spell Cards in your Graveyard.
+    When your opponent Normal or Special Summons a monster while you have 3 or more Spell Cards in your Graveyard.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set up to 2 "Thousand Knives", "Dark Magic Attack", and/or "Dark Resonance Burst" in your Spell & Trap Zone. Then, you take no battle damage from your opponent's Level 9 or lower monsters' attacks this turn.
+    Set up to 2 "Thousand Knives", "Dark Magic Attack", and/or "Dark Resonance Burst" from your Graveyard in your Spell & Trap Zone. Then, you take no battle damage from your opponent's Level 9 or lower monsters' attacks this turn.
   de:
   es:
   fr:
