--- a/data/cards/05041348.yaml
+++ b/data/cards/05041348.yaml
@@ -127,6 +127,9 @@ sets:
     - Secret Rare
     - Ultimate Rare
     - 20th Secret Rare
+  - set_number: DBVS-JP026
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
   ko:
   - set_number: CHIM-KR035
     set_name: Chaos Impact
