--- a/data/rush/17200.yaml
+++ b/data/rush/17200.yaml
@@ -75,6 +75,10 @@ sets:
     rarities:
     - Ultra Rare
     - Gold Rush Rare
+  - set_number: RD/MRP2-JP041
+    set_name: Megaroad Pack 2
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/GRP1-KR011
     set_name: Grand Rush Pack
