--- a/data/rush/17294.yaml
+++ b/data/rush/17294.yaml
@@ -1,6 +1,6 @@
 konami_id: 17294
 name:
-  en: Clawleon
+  en: Clawmeleon
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Chameleon
 images:
 - index: 1
-  image: Clawleon-RDKP08-JP-SR.png
+  image: Clawmeleon-RDKP08-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP08-JP018
@@ -63,8 +63,6 @@ sets:
     rarities:
     - Super Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 714292
