--- a/data/rush/17298.yaml
+++ b/data/rush/17298.yaml
@@ -1,6 +1,6 @@
 konami_id: 17298
 name:
-  en: Ecdysis Caliguleon
+  en: Ecdysis Caesarleon
   de:
   es:
   fr:
@@ -52,7 +52,7 @@ series:
 - Chameleon
 images:
 - index: 1
-  image: EcdysisCaliguleon-RDKP08-JP-UR.png
+  image: EcdysisCaesarleon-RDKP08-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP08-JP022
@@ -67,8 +67,6 @@ sets:
     - Ultra Rare
     - Rush Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 714755
