--- a/data/rush/yugipedia1005416.yaml
+++ b/data/rush/yugipedia1005416.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分が「風の子サイク」の効果を発動していないターンに、自分フィールドにこのカード以外の表側表示モンスター（風属性／魔法使い族）がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル４以下／魔法使い族）１体を選んで手札に加える。
   ko:
   zh-TW:
   zh-CN:
