--- a/data/rush/15172.yaml
+++ b/data/rush/15172.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/MRP2-JP030
+    set_name: Megaroad Pack 2
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/ST02-KR009
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
