--- a/data/rush/17329.yaml
+++ b/data/rush/17329.yaml
@@ -1,6 +1,6 @@
 konami_id: 17329
 name:
-  en: Explosive Rage
+  en: Fire Wrath
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Chameleon
 images:
 - index: 1
-  image: ExplosiveRage-RDKP08-JP-R.png
+  image: FireWrath-RDKP08-JP-R.png
 sets:
   ja:
   - set_number: RD/KP08-JP052
@@ -59,8 +59,6 @@ sets:
     rarities:
     - Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 711517
