--- a/data/rush/17337.yaml
+++ b/data/rush/17337.yaml
@@ -1,6 +1,6 @@
 konami_id: 17337
 name:
-  en: Warning Scale Phosphorescence
+  en: Wrath of Light
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Chameleon
 images:
 - index: 1
-  image: WarningScalePhosphorescence-RDKP08-JP-C.png
+  image: WrathofLight-RDKP08-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP061
@@ -59,8 +59,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 717460
