--- a/data/rush/yugipedia1002004.yaml
+++ b/data/rush/yugipedia1002004.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル５以上／魔法使い族）２体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（魔法使い族）１体を選び、その攻撃力をターン終了時まで、［選んだモンスターの元々の攻撃力］だけアップする。
   ko:
   zh-TW:
   zh-CN:
