--- a/data/rush/yugipedia1002005.yaml
+++ b/data/rush/yugipedia1002005.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（ドラゴン族）３体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター１体を選ぶ。このターン、そのモンスターの攻撃力は９００アップし、そのモンスターの攻撃宣言時に相手は罠カードを発動できない。さらに、自分の墓地の「ドラゴニック・スレイヤー」１体を選んで自分フィールドに表側守備表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
