--- a/data/rush/yugipedia1005414.yaml
+++ b/data/rush/yugipedia1005414.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスターがハイドラゴン族・ドラゴン族のみの場合、手札のモンスター１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター（レベル８以下）１体を選んで破壊する。その後、自分の墓地の「ドラゴニック・スレイヤー」１体を選んで自分フィールドに表側守備表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
