--- a/data/rush/yugipedia1001990.yaml
+++ b/data/rush/yugipedia1001990.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    １５００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード３枚を墓地へ送る。その後、この効果で墓地へ送られたカードの中から効果モンスター（攻撃力２５００）１体を選んで自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
