--- a/data/rush/yugipedia1001993.yaml
+++ b/data/rush/yugipedia1001993.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドに表側表示モンスター（攻撃力２１００以上）がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札の効果モンスター（レベル７）１体を自分フィールドに表側表示で特殊召喚する。その後、自分フィールドの全ての表側表示モンスターの攻撃力はターン終了時まで、［相手フィールドのモンスターの数］×３００アップする。
   ko:
   zh-TW:
   zh-CN:
