--- a/data/rush/yugipedia1001997.yaml
+++ b/data/rush/yugipedia1001997.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地に魔法カードが３枚以上ある場合、相手がモンスターを召喚・特殊召喚した時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「千本ナイフ」「黒・魔・導」「黒・魔・導・響・弾」を合計２枚まで選んで自分の魔法＆罠ゾーンにセットする。さらにこのターン、相手モンスター（レベル９以下）の攻撃で自分は戦闘ダメージを受けない。
   ko:
   zh-TW:
   zh-CN:
