--- a/rush.yaml
+++ b/rush.yaml
@@ -7900,6 +7900,10 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/MRP2-JP065
+    set_name: Megaroad Pack 2
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP02-KR023
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
@@ -114675,7 +114679,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    １５００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -114687,7 +114692,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード３枚を墓地へ送る。その後、この効果で墓地へ送られたカードの中から効果モンスター（攻撃力２５００）１体を選んで自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -114731,7 +114737,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドに表側表示モンスター（攻撃力２１００以上）がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -114743,7 +114750,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札の効果モンスター（レベル７）１体を自分フィールドに表側表示で特殊召喚する。その後、自分フィールドの全ての表側表示モンスターの攻撃力はターン終了時まで、［相手フィールドのモンスターの数］×３００アップする。
   ko:
   zh-TW:
   zh-CN:
@@ -114787,7 +114795,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地に魔法カードが３枚以上ある場合、相手がモンスターを召喚・特殊召喚した時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -114799,7 +114808,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「千本ナイフ」「黒・魔・導」「黒・魔・導・響・弾」を合計２枚まで選んで自分の魔法＆罠ゾーンにセットする。さらにこのターン、相手モンスター（レベル９以下）の攻撃で自分は戦闘ダメージを受けない。
   ko:
   zh-TW:
   zh-CN:
@@ -115719,7 +115729,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター（レベル７以上）の数が、自分フィールドのモンスターの数より多い場合、このカードは手札から自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -115731,7 +115742,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -115745,7 +115757,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地に魔法カードが６枚以上ある場合、このカードは相手の効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
