--- a/data/cards/34456146.yaml
+++ b/data/cards/34456146.yaml
@@ -49,7 +49,11 @@ series:
 - Sky Striker
 images:
 - index: 1
+  image: SageofBenevolenceCiela-YOS1-JP-UR.png
+  illustration: SageofBenevolenceCiela-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: SageofBenevolenceCiela-BLMR-EN-UR-1E.png
+  illustration: SageofBenevolenceCiela-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: BLMR-EN051
