--- a/data/rush/17324.yaml
+++ b/data/rush/17324.yaml
@@ -1,6 +1,6 @@
 konami_id: 17324
 name:
-  en: Shadow Flower Purple Smoke Spray
+  en: Shadow Flower Flurry
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Shadow Flower
 images:
 - index: 1
-  image: ShadowFlowerPurpleSmokeSpray-RDKP08-JP-C.png
+  image: ShadowFlowerFlurry-RDKP08-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP047
@@ -59,8 +59,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 716658
