--- a/data/cards/16240772.yaml
+++ b/data/cards/16240772.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>死<rt>し</rt></ruby>の<ruby>罪<rt>ざい</rt></ruby><ruby>宝<rt>ほう</rt></ruby>－ルシエラ
   ja_romaji: Shi no Zaihō - Rushiera
-  ko:
+  ko: 죽음의 죄보－루시엘라
   ko_rr:
   zh-TW:
   zh-CN:
@@ -26,7 +26,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドのレベル７以上の魔法使い族モンスター１体を対象として発動できる。以下の効果をそれぞれ適用する。●対象の表側表示モンスターはこのターン、他のモンスターの効果を受けず、次のターンのスタンバイフェイズに墓地へ送られる。●相手フィールドの全てのモンスターの攻撃力は、対象のモンスターの攻撃力分ダウンする。この効果で攻撃力が０になった場合、さらにそのモンスターを破壊する。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 레벨 7 이상의 마법사족 몬스터 1장을 대상으로 하고 발동할 수 있다. 이하의 효과를 각각 적용한다. ●대상의 앞면 표시 몬스터는 이 턴에, 다른 몬스터의 효과를 받지 않으며, 다음 턴의 스탠바이 페이즈에 묘지로 보내진다. ●상대 필드의 모든 몬스터의 공격력은, 대상 몬스터의 공격력만큼 내린다. 이 효과로 공격력이 0이 되었을 경우, 추가로 그 몬스터를 파괴한다.
   zh-TW:
   zh-CN:
 card_type: Spell
