--- a/data/cards/40785230.yaml
+++ b/data/cards/40785230.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: ヴェーダ＝ウパニシャッド
   ja_romaji: Vēda=Upanishaddo
-  ko:
+  ko: 베다＝우파니샤드
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカードは通常召喚できず、このカードのＰ効果でのみ特殊召喚できる。自分は「ヴェーダ＝ウパニシャッド」を１ターンに１度しか特殊召喚できない。①：１ターンに１度、相手がＥＸデッキからモンスターを特殊召喚した場合、自分の手札・フィールド・墓地からカード１２枚を裏側で除外して発動できる。このターンのエンドフェイズになる。②：自分スタンバイフェイズに発動する。このカードを手札に戻す。その後、自分の手札・デッキ・墓地・除外状態の「ヴェーダ」モンスター１体を特殊召喚できる。
-  ko:
+  ko: |-
+    이 카드는 통상 소환할 수 없으며, 이 카드의 펜듈럼 효과로만 특수 소환할 수 있다. 자신은 "베다＝우파니샤드"를 1턴에 1번밖에 특수 소환할 수 없다. ①: 1턴에 1번, 상대가 엑스트라 덱에서 몬스터를 특수 소환했을 경우, 자신의 패 / 필드 / 묘지에서 카드 12장을 뒷면으로 제외하고 발동할 수 있다. 이 턴의 엔드 페이즈가 된다. ②: 자신 스탠바이 페이즈에 발동한다. 이 카드를 패로 되돌린다. 그 후, 자신의 패 / 덱 / 묘지 / 제외 상태인 "베다" 몬스터 1장을 특수 소환할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -43,7 +44,8 @@ pendulum_effect:
   pt:
   ja: |-
     ①：自分か相手のモンスターが破壊された場合に発動する（同一チェーン上では１度まで）。このカードにカウンターを３つ置く。②：このカードのＰスケールはこのカードのカウンターの数だけ上がる。③：このカードのカウンターを１２個取り除いて発動できる。このカードを特殊召喚する。
-  ko:
+  ko: |-
+    ①: 자신이나 상대의 몬스터가 파괴되었을 경우에 발동한다(동일한 체인 위에서는 1번까지). 이 카드에 카운터를 3개 놓는다. ②: 이 카드의 펜듈럼 스케일은 이 카드의 카운터 수만큼 올라간다. ③: 이 카드의 카운터를 12개 제거하고 발동할 수 있다. 이 카드를 특수 소환한다.
   zh-TW:
   zh-CN:
 series:
