--- a/data/cards/72270339.yaml
+++ b/data/cards/72270339.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>黒<rt>くろ</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>女<rt>じょ</rt></ruby>ディアベルスター
   ja_romaji: Kuromajo Diaberusutā
-  ko:
+  ko: 흑마녀 디아벨스타
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードは自分の手札・フィールドのカード１枚を墓地へ送り、手札から特殊召喚できる。②：このカードが召喚・特殊召喚した場合に発動できる。デッキから「罪宝」魔法・罠カード１枚を自分フィールドにセットする。③：このカードが相手ターンに手札・フィールドから墓地へ送られた場合に発動できる。自分の手札・フィールドからカード１枚を墓地へ送り、このカードを特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 자신의 패 / 필드의 카드 1장을 묘지로 보내고, 패에서 특수 소환할 수 있다. ②: 이 카드를 일반 소환 / 특수 소환했을 경우에 발동할 수 있다. 덱에서 "죄보" 마법 / 함정 카드 1장을 자신 필드에 세트한다. ③: 이 카드가 상대 턴에 패 / 필드에서 묘지로 보내졌을 경우에 발동할 수 있다. 자신의 패 / 필드의 카드 1장을 묘지로 보내고, 이 카드를 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Monster
