--- a/data/cards/74725513.yaml
+++ b/data/cards/74725513.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: ホルスの<ruby>加<rt>か</rt></ruby><ruby>護<rt>ご</rt></ruby>－ケベンセヌフ
   ja_romaji: Horusu no Kago - Kebensenufu
-  ko:
+  ko: 호루스의 가호－케벤세누프
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,9 @@ text:
   pt:
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：自分フィールドに「王の棺」が存在する場合、このカードは墓地から特殊召喚できる。②：このカードがモンスターゾーンに存在する状態で、自分フィールドの他のカードが相手の効果でフィールドから離れた場合に発動できる。このターン、相手モンスターは「ホルス」モンスターを攻撃対象にできず、相手はフィールドの「ホルス」モンスターを効果の対象にできない。
-  ko:
+  ko: |-
+    이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②의 효과는 1턴에 1번밖에 사용할 수 없다.
+    ①: 자신 필드에 "왕의 관"이 존재할 경우, 이 카드는 묘지에서 특수 소환할 수 있다. ②: 이 카드가 몬스터 존에 존재하는 상태에서, 자신 필드의 다른 카드가 상대의 효과로 필드에서 벗어났을 경우에 발동할 수 있다. 이 턴에, 상대 몬스터는 "호루스" 몬스터를 공격 대상으로 할 수 없으며, 상대는 필드의 "호루스" 몬스터를 효과의 대상으로 할 수 없다.
   zh-TW:
   zh-CN:
 card_type: Monster
