--- a/data/cards/80845034.yaml
+++ b/data/cards/80845034.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: ＂<ruby>罪<rt>ざい</rt></ruby><ruby>宝<rt>ほう</rt></ruby><ruby>狩<rt>が</rt></ruby>りの<ruby>悪<rt>あく</rt></ruby><ruby>魔<rt>ま</rt></ruby>＂
   ja_romaji: '"Zaihōgari no Akuma"'
-  ko:
+  ko: '"죄보사냥의 악마"'
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分のデッキ・墓地から「ディアベルスター」モンスター１体を手札に加える。②：自分メインフェイズに墓地のこのカードを除外し、「＂罪宝狩りの悪魔＂」以外の自分の墓地・除外状態の「罪宝」魔法・罠カード１枚を対象として発動できる。そのカードをデッキの一番下に戻す。その後、自分は１枚ドローする。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신의 덱 / 묘지에서 "디아벨스타" 몬스터 1장을 패에 넣는다. ②: 자신 메인 페이즈에 묘지의 이 카드를 제외하고, ""죄보사냥의 악마"" 이외의 자신의 묘지 / 제외 상태인 "죄보" 마법 / 함정 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 덱 맨 아래로 되돌린다. 그 후, 자신은 1장 드로우한다.
   zh-TW:
   zh-CN:
 card_type: Spell
