--- a/data/rush/16904.yaml
+++ b/data/rush/16904.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Straynge Cat" from your Graveyard to your hand, then you can draw 1 card. If you drew by this effect, you cannot attack with Level 6 or lower monsters this turn.
+    Add 1 "Straynge Cat" from your Graveyard to your hand. Then, you can draw 1 card. If you drew by this effect, you cannot attack with Level 6 or lower monsters this turn.
   de:
   es:
   fr:
