--- a/data/rush/17314.yaml
+++ b/data/rush/17314.yaml
@@ -1,6 +1,6 @@
 konami_id: 17314
 name:
-  en: Durga the Shadow Flower Stealth Submarine
+  en: Durga the Shadow Flower Submarine
   de:
   es:
   fr:
@@ -64,7 +64,7 @@ series:
 - Shadow Flower
 images:
 - index: 1
-  image: DurgatheShadowFlowerStealthSubmarine-RDKP08-JP-R.png
+  image: DurgatheShadowFlowerSubmarine-RDKP08-JP-R.png
 sets:
   ja:
   - set_number: RD/KP08-JP038
@@ -77,8 +77,6 @@ sets:
     rarities:
     - Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 714742
