--- a/data/rush/18757.yaml
+++ b/data/rush/18757.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 monster on your opponent's field. Then, if this card is in Maximum Mode and you shuffled 3 or more Maximum Monsters into the Deck to meet the requirement, you can destroy all cards on your opponent's field.
+    Destroy 1 monster on your opponent's field. Then, if this card is in Maximum Mode and you returned 3 or more Maximum Monsters to the Deck to meet the requirement, you can destroy all cards on your opponent's field.
   de:
   es:
   fr:
