--- a/data/rush/16996.yaml
+++ b/data/rush/16996.yaml
@@ -1,6 +1,6 @@
 konami_id: 16996
 name:
-  en: Cleaning Machine Gorgain
+  en: Clean Machine Newsweeper
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Newspaper
 images:
 - index: 1
-  image: CleaningMachineGorgain-RDSD02-JP-C.png
+  image: CleanMachineNewsweeper-RDSD02-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP030
@@ -71,8 +71,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 714294
