--- a/data/rush/17308.yaml
+++ b/data/rush/17308.yaml
@@ -1,6 +1,6 @@
 konami_id: 17308
 name:
-  en: Master of Sevens Road
+  en: Master of the Sevens Road
   de:
   es:
   fr:
@@ -66,7 +66,7 @@ series:
 - Sevens Road
 images:
 - index: 1
-  image: MasterofSevensRoad-RDKP08-JP-UR.png
+  image: MasteroftheSevensRoad-RDKP08-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP08-JP032
@@ -81,8 +81,6 @@ sets:
     - Ultra Rare
     - Rush Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 715825
