--- a/data/rush/17678.yaml
+++ b/data/rush/17678.yaml
@@ -1,6 +1,6 @@
 konami_id: 17678
 name:
-  en: Omega Guitarna the Supreme Shining Superstar
+  en: Omega Guitarna the Shining Megastar
   de:
   es:
   fr:
@@ -67,7 +67,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: OmegaGuitarnatheSupremeShiningSuperstar-RDMRP1-JP-SR.png
+  image: OmegaGuitarnatheShiningMegastar-RDMRP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP024
@@ -80,8 +80,6 @@ sets:
     rarities:
     - Super Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 716104
