--- a/data/rush/19109.yaml
+++ b/data/rush/19109.yaml
@@ -1,6 +1,6 @@
 konami_id: 19109
 name:
-  en: Trancegodbreath the Music Fiend Deity
+  en: Divinebreath the Orchestral Music Fiend
   de:
   es:
   fr:
@@ -61,7 +61,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: TrancegodbreaththeMusicFiendDeity-RDTB01-JP-SR.png
+  image: DivinebreaththeOrchestralMusicFiend-RDTB01-JP-SR.png
 sets:
   ja:
   - set_number: RD/TB01-JP018
@@ -70,8 +70,6 @@ sets:
     - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 937016
