--- a/data/rush/19119.yaml
+++ b/data/rush/19119.yaml
@@ -1,6 +1,6 @@
 konami_id: 19119
 name:
-  en: Tiger Doom Sight
+  en: Tiger Glare
   de:
   es:
   fr:
@@ -42,7 +42,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: TigerDoomSight-RDTB01-JP-SR.png
+  image: TigerGlare-RDTB01-JP-SR.png
 sets:
   ja:
   - set_number: RD/TB01-JP035
@@ -51,8 +51,6 @@ sets:
     - Super Rare
     - Secret Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 986104
