--- a/data/rush/19120.yaml
+++ b/data/rush/19120.yaml
@@ -1,6 +1,6 @@
 konami_id: 19120
 name:
-  en: Universal Destruction
+  en: Destruction of the Universe
   de:
   es:
   fr:
@@ -42,7 +42,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: UniversalDestruction-RDTB01-JP-NPR.png
+  image: DestructionoftheUniverse-RDTB01-JP-NPR.png
 sets:
   ja:
   - set_number: RD/TB01-JP036
@@ -50,8 +50,6 @@ sets:
     rarities:
     - Normal Parallel Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 943769
