--- a/rush.yaml
+++ b/rush.yaml
@@ -57449,7 +57449,7 @@ yugipedia_page_id: 715825
 ---
 konami_id: 17309
 name:
-  en: Fantasia Strike Dragon Miragiastar F
+  en: Hazy Strike Dragon Miragiastar F
   de:
   es:
   fr:
@@ -57516,7 +57516,7 @@ series:
 - Strike Dragon
 images:
 - index: 1
-  image: FantasiaStrikeDragonMiragiastarF-RDS224-JP-ScR.png
+  image: HazyStrikeDragonMiragiastarF-RDS224-JP-ScR.png
 sets:
   ja:
   - set_number: RD/KP08-JP033
@@ -57535,8 +57535,6 @@ sets:
     - Ultra Rare
     - Rush Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 714922
@@ -68356,8 +68354,6 @@ sets:
     rarities:
     - Super Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 714488
@@ -68427,7 +68423,7 @@ yugipedia_page_id: 715694
 ---
 konami_id: 17674
 name:
-  en: Road Magic - Dark Night
+  en: Road Magic - Dark Twilight
   de:
   es:
   fr:
@@ -68473,7 +68469,7 @@ series:
 - Road Magic
 images:
 - index: 1
-  image: RoadMagicDarkNight-RDMRP1-JP-R.png
+  image: RoadMagicDarkTwilight-RDMRP1-JP-R.png
 sets:
   ja:
   - set_number: RD/MRP1-JP019
@@ -68486,8 +68482,6 @@ sets:
     rarities:
     - Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 716488
