--- a/data/rush/17675.yaml
+++ b/data/rush/17675.yaml
@@ -1,6 +1,6 @@
 konami_id: 17675
 name:
-  en: Darkness Road
+  en: Darkness Lode
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Darkness
 images:
 - index: 1
-  image: DarknessRoad-RDMRP1-JP-C.png
+  image: DarknessLode-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP020
@@ -59,8 +59,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 714487
