--- a/data/rush/18767.yaml
+++ b/data/rush/18767.yaml
@@ -1,6 +1,6 @@
 konami_id: 18767
 name:
-  en: Supreme Electromagnetic Maximum
+  en: Super Electromagnetic Maximum
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: SupremeElectromagneticMaximum-RDVSP1-JP-SR.png
+  image: SuperElectromagneticMaximum-RDVSP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/VSP1-JP024
@@ -59,8 +59,6 @@ sets:
     - Super Rare
     - Secret Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 906123
