--- a/rush.yaml
+++ b/rush.yaml
@@ -62892,8 +62892,6 @@ sets:
     - Ultra Rare
     - Rush Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 716650
@@ -68137,8 +68135,6 @@ sets:
     - Ultra Rare
     - Rush Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 715711
@@ -68208,8 +68204,6 @@ sets:
     rarities:
     - Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 714489
@@ -68488,7 +68482,7 @@ yugipedia_page_id: 716488
 ---
 konami_id: 17675
 name:
-  en: Darkness Road
+  en: Darkness Lode
   de:
   es:
   fr:
@@ -68534,7 +68528,7 @@ series:
 - Darkness
 images:
 - index: 1
-  image: DarknessRoad-RDMRP1-JP-C.png
+  image: DarknessLode-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP020
@@ -68547,8 +68541,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 714487
@@ -100356,7 +100348,7 @@ yugipedia_page_id: 806129
 ---
 konami_id: 18767
 name:
-  en: Supreme Electromagnetic Maximum
+  en: Super Electromagnetic Maximum
   de:
   es:
   fr:
@@ -100400,7 +100392,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: SupremeElectromagneticMaximum-RDVSP1-JP-SR.png
+  image: SuperElectromagneticMaximum-RDVSP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/VSP1-JP024
@@ -100415,8 +100407,6 @@ sets:
     - Super Rare
     - Secret Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 906123
