--- a/data/rush/yugipedia1001669.yaml
+++ b/data/rush/yugipedia1001669.yaml
@@ -29,7 +29,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● This card can attack thrice during this turn.
+    ● This card can attack 3 times during this turn.
     ● Shuffle up to 3 Normal Monsters from your Graveyard into the Deck. Then, you can destroy Spell/Trap Cards on your opponent's field, up to [the number of "The Dragias" shuffled into the Deck by this effect].
   de:
   es:
