--- a/rush.yaml
+++ b/rush.yaml
@@ -54723,7 +54723,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card can make up to 3 attacks on monsters. Shuffle this card into the Deck during the End Phase of this turn.
+    This turn, this card can make up to 3 attacks on monsters. Shuffle this card into the owner's Deck during the End Phase of this turn.
   de:
   es:
   fr:
@@ -114558,7 +114558,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● This card can attack thrice during this turn.
+    ● This card can attack 3 times during this turn.
     ● Shuffle up to 3 Normal Monsters from your Graveyard into the Deck. Then, you can destroy Spell/Trap Cards on your opponent's field, up to [the number of "The Dragias" shuffled into the Deck by this effect].
   de:
   es:
