--- a/rush.yaml
+++ b/rush.yaml
@@ -115796,6 +115796,66 @@ yugipedia_page_id: 1005416
 ---
 konami_id:
 name:
+  en: Accel Wonder Light
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: アクセルワンダー・ライト
+  ja_romaji: Akuseru Wandā Raito
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 4 cards of your Deck. You can send up to 2 excavated non-Trap Cards to the Graveyard. Shuffle the remaining cards into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: LIGHT
+level: 5
+atk: 1700
+def: 1800
+images:
+- index: 1
+  image: AccelWonderLight-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP012
+    set_name: Megaroad Pack 2
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1005862
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
