--- a/data/cards/17214465.yaml
+++ b/data/cards/17214465.yaml
@@ -117,5 +117,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 14282
