--- a/data/cards/02376209.yaml
+++ b/data/cards/02376209.yaml
@@ -139,5 +139,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 365856
