--- a/data/cards/07526150.yaml
+++ b/data/cards/07526150.yaml
@@ -73,7 +73,7 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 9120
