--- a/data/cards/18605135.yaml
+++ b/data/cards/18605135.yaml
@@ -207,5 +207,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 5331
