--- a/data/cards/34029630.yaml
+++ b/data/cards/34029630.yaml
@@ -205,5 +205,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 7915
