--- a/data/cards/51828629.yaml
+++ b/data/cards/51828629.yaml
@@ -149,5 +149,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 5537
