--- a/data/cards/68334074.yaml
+++ b/data/cards/68334074.yaml
@@ -157,5 +157,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 13242
