--- a/data/cards/77252217.yaml
+++ b/data/cards/77252217.yaml
@@ -150,5 +150,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 2627
