--- a/data/cards/91559748.yaml
+++ b/data/cards/91559748.yaml
@@ -165,5 +165,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 14292
