--- a/data/cards/93107608.yaml
+++ b/data/cards/93107608.yaml
@@ -145,5 +145,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 15690
