--- a/data/cards/96938986.yaml
+++ b/data/cards/96938986.yaml
@@ -154,5 +154,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 333371
