--- a/data/cards/96947648.yaml
+++ b/data/cards/96947648.yaml
@@ -292,5 +292,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 10395
