--- a/data/cards/69846323.yaml
+++ b/data/cards/69846323.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 贯通海鳝
 text:
   en: |-
-    Once per turn: You can Tribute 1 other Fish, Sea Serpent, or Aqua monster; this card gains 600 ATK. If this card attacks a Defense Position monster, inflict piercing Battle Damage.
+    Once per turn: You can Tribute 1 other Fish, Sea Serpent, or Aqua monster; this card gains 600 ATK. If this card attacks a Defense Position monster, inflict piercing battle damage.
   de: |-
     Einmal pro Spielzug: Du kannst 1 Monster vom Typ Fisch, Seeschlange oder Aqua als Tribut anbieten; diese Karte erhält 600 ATK. Falls diese Karte ein Monster in Verteidigungsposition angreift, füge deinem Gegner durchschlagenden Kampfschaden zu.
   es: |-
