--- a/rush.yaml
+++ b/rush.yaml
@@ -115865,7 +115865,7 @@ name:
   it:
   pt:
   ja: <ruby>波<rt>は</rt></ruby><ruby>状<rt>じょう</rt></ruby><ruby>防<rt>ぼう</rt></ruby><ruby>壁<rt>へき</rt></ruby>
-  ja_romaji: Hajō Bōheki
+  ja_romaji: Hajōbōheki
   ko:
   ko_rr:
   zh-TW:
